--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "@cezaryrk/minimatch": "^3.0.4",
-    "@typexs/base": "0.x",
+    "@typexs/base": "^0.11.0",
     "@typexs/roles-api": "^1.0.10",
-    "@typexs/schema": "0.x"
+    "@typexs/schema": "^0.7.3"
   },
   "private": true,
   "nyc": {
