--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
     "merge-stream": "^2.0.0",
-    "mocha": "^8.0.1",
+    "mocha": "^7.2.0git ",
     "mocha-typescript": "^1.1.17",
     "nyc": "^15.1.0",
     "sqlite3": "^4.2.0",
