--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/gulp-replace": "0.0.31",
     "@types/gulp-sourcemaps": "0.0.32",
     "@types/lodash": "^4.14.156",
-    "@typexs/server": "^1.0.0",
+    "@typexs/server": "^1.0.2",
     "chai": "^4.2.0",
     "codecov": "^3.7.0",
     "codelyzer": "5.2.2",
@@ -34,7 +34,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
     "merge-stream": "^2.0.0",
-    "mocha": "^7.2.0git ",
+    "mocha": "^7.2.0",
     "mocha-typescript": "^1.1.17",
     "nyc": "^15.1.0",
     "sqlite3": "^4.2.0",
@@ -45,9 +45,9 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "@cezaryrk/minimatch": "^3.0.4",
-    "@typexs/base": "^1.2.16",
+    "@typexs/base": "^1.2.21",
     "@typexs/roles-api": "^1.0.10",
-    "@typexs/schema": "^1.0.0"
+    "@typexs/schema": "^1.0.6"
   },
   "private": true,
   "nyc": {
