--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/roles",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "",
   "main": "index.js",
   "browser": "browser.js",
@@ -18,23 +18,21 @@
     "@allgemein/packaging": "^1.1.0",
     "@types/chai": "^4.2.11",
     "@types/gulp": "^4.0.6",
-    "@types/gulp-replace": "0.0.31",
-    "@types/gulp-sourcemaps": "0.0.32",
-    "@types/lodash": "^4.14.156",
+    "@types/lodash": "^4.14.161",
     "@typexs/server": "^1.0.2",
     "chai": "^4.2.0",
-    "codecov": "^3.7.0",
-    "codelyzer": "5.2.2",
-    "del": "5.1.0",
+    "codecov": "^3.7.2",
+    "codelyzer": "^6.0.0",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-bump": "^3.1.3",
+    "gulp-bump": "^3.2.0",
     "gulp-clean": "^0.4.0",
     "gulp-replace": "^1.0.0",
     "gulp-shell": "^0.8.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
     "merge-stream": "^2.0.0",
-    "mocha": "^7.2.0",
+    "mocha": "^8.1.3",
     "mocha-typescript": "^1.1.17",
     "nyc": "^15.1.0",
     "sqlite3": "^4.2.0",
@@ -43,11 +41,11 @@
     "typescript": "3.5.3"
   },
   "dependencies": {
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.0",
     "@cezaryrk/minimatch": "^3.0.4",
     "@typexs/base": "^1.2.21",
     "@typexs/roles-api": "^1.0.13",
-    "@typexs/schema": "^1.0.6"
+    "@typexs/schema": "^1.0.14"
   },
   "private": true,
   "nyc": {
