--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "browser": "browser.js",
   "scripts": {
-    "test": "nyc mocha --opts test/mocha.all.opts",
+    "test": "nyc mocha test/**/*.spec.ts test/**/**/*.spec.ts",
     "posttest": "codecov -f coverage/*.json"
   },
   "repository": {
