--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "browser": "browser.js",
   "scripts": {
-    "test": "nyc mocha test/**/*.spec.ts test/**/**/*.spec.ts",
-    "posttest": "codecov -f coverage/*.json"
+    "test": "npx nyc mocha test/**/*.spec.ts test/**/**/*.spec.ts",
+    "posttest": "npx codecov -f coverage/*.json"
   },
   "repository": {
     "type": "git",
@@ -35,7 +35,7 @@
     "mocha": "^8.1.3",
     "mocha-typescript": "^1.1.17",
     "nyc": "^15.1.0",
-    "sqlite3": "^4.2.0",
+    "sqlite3": "^5.0.0",
     "ts-node": "^9.0.0",
     "tslint": "6.1.3",
     "typescript": "3.5.3"
@@ -43,7 +43,7 @@
   "dependencies": {
     "lodash": "^4.17.20",
     "@cezaryrk/minimatch": "^3.0.4",
-    "@typexs/base": "^1.2.32",
+    "@typexs/base": "^1.2.33",
     "@typexs/roles-api": "^1.0.14",
     "@typexs/schema": "^1.0.15"
   },
