--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@types/chai": "^4.2.13",
     "@types/gulp": "^4.0.7",
     "@types/lodash": "^4.14.161",
-    "@typexs/server": "^1.0.13",
+    "@typexs/server": "^1.0.20",
+    "@typexs/base": "^1.2.53",
+    "@typexs/schema": "^1.0.23",
     "chai": "^4.2.0",
     "codecov": "^3.8.0",
     "codelyzer": "^6.0.1",
@@ -43,9 +45,11 @@
   "dependencies": {
     "lodash": "^4.17.0",
     "@cezaryrk/minimatch": "^3.0.4",
-    "@typexs/base": "^1.2.49",
-    "@typexs/roles-api": "^1.0.19",
-    "@typexs/schema": "^1.0.22"
+    "@typexs/roles-api": "^1.0.19"
+  },
+  "peerDependencies": {
+    "@typexs/base": "^1.2.53",
+    "@typexs/schema": "^1.0.23"
   },
   "private": true,
   "nyc": {
