--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   "license": "MIT",
   "devDependencies": {
     "@allgemein/packaging": "^1.1.0",
-    "@types/chai": "^4.2.13",
-    "@types/gulp": "^4.0.7",
-    "@types/lodash": "^4.14.161",
-    "@typexs/server": "^1.0.20",
-    "@typexs/base": "^1.2.53",
-    "@typexs/schema": "^1.0.23",
-    "chai": "^4.2.0",
-    "codecov": "^3.8.0",
+    "@types/chai": "^4.2.14",
+    "@types/gulp": "^4.0.8",
+    "@types/lodash": "^4.14.168",
+    "@typexs/server": "^1.1.0",
+    "@typexs/base": "^1.3.3",
+    "@typexs/schema": "^1.1.0",
+    "chai": "^4.3.0",
+    "codecov": "^3.8.1",
     "codelyzer": "^6.0.1",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -31,25 +31,27 @@
     "gulp-clean": "^0.4.0",
     "gulp-replace": "^1.0.0",
     "gulp-shell": "^0.8.0",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^5.0.1",
     "merge-stream": "^2.0.0",
-    "mocha": "^8.1.3",
+    "mocha": "^8.2.1",
     "mocha-typescript": "^1.1.17",
     "nyc": "^15.1.0",
-    "sqlite3": "^5.0.0",
-    "ts-node": "^9.0.0",
+    "sqlite3": "^5.0.1",
+    "ts-node": "^9.1.1",
     "tslint": "6.1.3",
-    "typescript": "3.5.3"
+    "typeorm": "0.2.28",
+    "typescript": "4.1.3",
+    "winston": "^3.3.3"
   },
   "dependencies": {
-    "lodash": "^4.17.0",
+    "lodash": "^4.17.20",
     "@cezaryrk/minimatch": "^3.0.4",
     "@typexs/roles-api": "^1.0.19"
   },
   "peerDependencies": {
-    "@typexs/base": "^1.2.53",
-    "@typexs/schema": "^1.0.23"
+    "@typexs/base": "^1.3.3",
+    "@typexs/schema": "^1.1.0"
   },
   "private": true,
   "nyc": {
