--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/roles",
-  "version": "1.0.20",
+  "version": "1.5.0",
   "description": "",
   "main": "index.js",
   "browser": "browser.js",
@@ -10,72 +10,50 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/typexs/typexs-roles.git"
+    "url": "git+https://gitlab.com/typexs/roles.git"
   },
   "author": "Robert Kania",
   "license": "MIT",
   "devDependencies": {
-    "@allgemein/packaging": "^1.1.0",
-    "@types/chai": "^4.2.14",
+    "@allgemein/packaging": "^1.1.1",
+    "@testdeck/mocha": "^0.1.2",
+    "@types/chai": "^4.2.18",
     "@types/gulp": "^4.0.8",
-    "@types/lodash": "^4.14.168",
-    "@typexs/server": "^1.1.0",
-    "@typexs/base": "^1.3.3",
-    "@typexs/schema": "^1.1.0",
-    "chai": "^4.3.0",
-    "codecov": "^3.8.1",
-    "codelyzer": "^6.0.1",
+    "@types/lodash": "^4.14.170",
+    "@typexs/base": "^1.5.7",
+    "@typexs/schema": "^1.5.2",
+    "@typexs/server": "^1.5.2",
+    "chai": "^4.3.4",
+    "codecov": "^3.8.2",
+    "codelyzer": "^6.0.2",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-bump": "^3.2.0",
     "gulp-clean": "^0.4.0",
-    "gulp-replace": "^1.0.0",
+    "gulp-replace": "^1.1.3",
     "gulp-shell": "^0.8.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^5.0.1",
     "merge-stream": "^2.0.0",
-    "mocha": "^8.2.1",
-    "mocha-typescript": "^1.1.17",
+    "mocha": "^8.4.0",
     "nyc": "^15.1.0",
-    "sqlite3": "^5.0.1",
-    "ts-node": "^9.1.1",
+    "sqlite3": "^5.0.2",
+    "ts-node": "^10.0.0",
     "tslint": "6.1.3",
-    "typeorm": "0.2.28",
-    "typescript": "4.1.3",
+    "typeorm": "0.2.34",
+    "typescript": "4.3.2",
     "winston": "^3.3.3"
   },
   "dependencies": {
-    "lodash": "^4.17.20",
     "@cezaryrk/minimatch": "^3.0.4",
-    "@typexs/roles-api": "^1.0.19"
+    "@typexs/roles-api": "^1.0.19",
+    "lodash": "^4.17.21"
   },
   "peerDependencies": {
-    "@typexs/base": "^1.3.3",
-    "@typexs/schema": "^1.1.0"
+    "@typexs/base": "^1.5.7",
+    "@typexs/schema": "^1.5.2"
   },
   "private": true,
-  "nyc": {
-    "extension": [
-      ".ts",
-      ".tsx"
-    ],
-    "exclude": [
-      "**/*.d.ts",
-      "tmp/",
-      "build/"
-    ],
-    "require": [
-      "ts-node/register"
-    ],
-    "sourceMap": true,
-    "instrument": true,
-    "cache": false,
-    "reporter": [
-      "html",
-      "json",
-      "text"
-    ]
-  },
   "typexs": {
     "name": "roles"
   }
