--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "stripInternal": true,
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
+    "skipLibCheck": true,
     "typeRoots": [
       "./node_modules/@types"
     ]
